# mplang

./: .gitignore  AGENTS.md  Cargo.toml  LICENSE  README.md  std_enum_tmp.txt
examples/: array.mp  crate_demo.mp  enums_exit0.mp  enums_exit42.mp  functions.mp  generics_exit74.mp  generics_uninferable_error.mp  hello.mp  match_int_exit0.mp  math.mp  methods.mp  modules.mp  pointers.mp  print_specialization_exit0.mp  structs.mp  thirdparty.mp  traits.mp  traits_dyn_exit0.mp  use_alloc.mp  use_core.mp  use_std.mp  use_std_enum_exit0.mp
src/: ast.rs  error.rs  hir.rs  lexer.rs  lib.rs  lowering.rs  main.rs  monomorphize.rs  symbol.rs  token.rs  tycheck.rs  tyhir.rs
src/compiler/: abi.rs  backend.rs  globals.rs  mod.rs  types.rs  values.rs
src/compiler/codegen/: addr_taken.rs  expr.rs  function.rs  mod.rs  stmt.rs
src/parser/: decl.rs  expr.rs  mod.rs  stmt.rs
tests/: cli.rs  pipeline.rs  test_examples.rs
