[package]
name = "mplangc"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.6.1", features = ["derive"] }
cranelift = "0.133.1"
cranelift-codegen = "0.133.1"
cranelift-frontend = "0.133.1"
cranelift-jit = "0.133.1"
cranelift-module = "0.133.1"
cranelift-object = "0.133.1"
env_logger = "0.11.11"
log = "0.4.33"
target-lexicon = "0.13.5"
